--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ 
-    List<WishList.Models.Item>
+    @model List<WishList.Models.Item>
 }
 <h1>Wishlist</h1>
 <a asp-action="create">Add Item</a>
