--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -4,7 +4,7 @@
 <h1>Wishlist</h1>
 <a asp-action="create">Add Item</a>
 <ul>
-    @foreach(var item in Model)
+    @foreach(WishList.Models.Item item in Model)
     {
         <li>@item.Description <a asp-action="delete" asp-route-id="@item.Id">Delete</a> </li>
     }
