--- a/WishList/Views/_ViewImports.cshtml
+++ b/WishList/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using WishList
+@using WishList.Models 
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
