--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -1,11 +1,12 @@
-﻿@model List<WishList.Models.Item>
+@model List<WishList.Models.Item>
 
 <h1>Wishlist</h1>
+
 <a asp-action="create">Add item</a>
 
 <ul>
-    @foreach (WishList.Models.Item item in Model)
+    @foreach (var item in Model)
     {
-        <li>@item.Description <a asp-action="delete" asp-route-id=@item.Id>delete</a></li>
+        <li>@item.Description <a asp-action="delete" asp-route-id="@item.Id">delete</a></li>
     }
 </ul>
